k8s/overlays/prod/patch-backend-secret-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fullstack-app
spec:
  template:
    spec:
      containers:
        - name: backend
